Add stop single and stop all timeline processes
